syntax = "proto3";
package slp.rpc.activity;

import "slp/plugin/option.proto";

import "rpc/activity/qixi_message.proto";
import "rpc/activity/send_gift_message.proto";

option go_package = "github.com/olaola-chat/slp-proto/rpcclient/activity";

service RbpActivityQixi {
    option (slp.plugin.rbp_service).name = "Rbp.Activity.Qixi";

    rpc RoomPackage(ReqRoomPackage) returns (RepConsume);
    rpc ChatGift(ReqChatGift) returns (RepConsume);

    rpc GetMyData(ReqQixiMyData) returns (RepQixiMyData);
    rpc GetAwardPool(ReqQixiAwardPool) returns (RepQixiAwardPool);
}
